Criando e estruturando as páginas Login e Cadastro para o projeto

--- a/src/components/Footer/style.css
+++ b/src/components/Footer/style.css
@@ -132,6 +132,7 @@
     .copyright {
         text-align: left; /* Alinha o copyright à esquerda em telas maiores */
         padding-top: 15px;
+        color: #fff;
     }
 
     .footer-links {
