--- a/src/pages/Projeto/projeto.css
+++ b/src/pages/Projeto/projeto.css
@@ -1,24 +1,20 @@
-/* Estilos específicos para a página "Projeto" */
 .projeto {
-    padding-top: 100px; /* Evita que o conteúdo fique coberto pelo header */
-    min-height: 65vh; /* Garante que o conteúdo ocupe toda a altura da tela */
+    padding-top: 100px; 
+    min-height: 65vh; 
     display: flex;
     flex-direction: column;
   }
   
-  /* Garante que o footer fique fixo ao fundo */
   footer {
-    margin-top: auto; /* Faz o footer ficar na parte inferior */
+    margin-top: auto; 
   }
   
-  /* Estilos para o conteúdo da página */
   .projeto .row {
     display: flex;
     align-items: center;
     justify-content: center;
   }
   
-  /* Ajustes para o texto */
   .projeto .text-primary {
     color: #007bff;
   }
@@ -39,7 +35,6 @@
     margin-top: 3rem;
   }
   
-  /* Imagem no container */
   .projeto .imagem-container img {
     max-width: 100%;
     height: auto;
